se arreglo imagenes

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </div>
             <div class="signos">
                 <div class="corazon">
-                    <a href="#"><img src="Imagenes/corazon.svg" alt="corazon"></a>
+                    <a href="#"><img src="./Imagenes/corazon.svg" alt="corazon"></a>
                 </div>
                 <div class="carrito">
-                    <a href="#"><img src="Imagenes/bag.svg" alt="carrito"></a>
+                    <a href="#"><img src="./Imagenes/bag.svg" alt="bag"></a>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
             <section>
                 <div class="grid-container">
                     <div class="card">
-                        <img src="Imagenes/1.png" alt="Imagen 1">
+                        <img src="./Imagenes/1.png" alt="Imagen 1">
                         <div class="card-content">
                             <h2>Campera Canguro</h2>
                             <p>$ 10000 <span>$12000</span></p>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/2.png" alt="Imagen 2">
+                        <img src="./Imagenes/2.png" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Gorra Trucker</h2>
                             <p>$5000 <span>$7000</span></p>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/3.jpg" alt="Imagen 2">
+                        <img src="./Imagenes/3.jpg" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Campera Mujer</h2>
                             <p>$9000 <span>$12000</span></p>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/4.png" alt="Imagen 2">
+                        <img src="./Imagenes/4.png" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Chaleco Hilo</h2>
                             <p>$5000 <span>$7000</span></p>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/5.jpg" alt="Imagen 2">
+                        <img src="./Imagenes/5.jpg" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Campera hombre</h2>
                             <p>$15000 <span>$18000</span></p>
