--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Link Css -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Link AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 </head>
@@ -25,6 +27,9 @@
 
 <body>
     <!-- nav -->
+    <div class="nav-cuotas">
+        <p>✨🚀 HASTA 3 CUOTAS SIN INTERÉS</p>
+    </div>
     <nav class="navbar navbar-expand-lg bg-martin">
         <div class="container-fluid">
             <a class="navbar-brand logo" href="index.html"><img src="Imagenes/logotito.png" alt="logotito"></a>
@@ -35,25 +40,26 @@
             <div class="collapse navbar-collapse nav-martin" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="./paginas/camperas.html">CAMPERAS</a>
+                        <a class="nav-link" href="paginas/camperas.html">CAMPERAS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/buzos.html">BUZOS</a>
+                        <a class="nav-link" href="paginas/buzos.html">BUZOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/gorras.html">GORRAS</a>
+                        <a class="nav-link" href="paginas/gorras.html">GORRAS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/contactos.html">CONTACTOS</a>
+                        <a class="nav-link" href="paginas/contactos.html">CONTACTOS</a>
                     </li>
                 </ul>
             </div>
+
             <div class="signos">
                 <div class="corazon">
-                    <a href="#"><img src="./Imagenes/corazon.svg" alt="corazon"></a>
+                    <a href="#"><img src="Imagenes/corazon.svg" alt="corazon"></a>
                 </div>
                 <div class="carrito">
-                    <a href="#"><img src="./Imagenes/bag.svg" alt="bag"></a>
+                    <a href="#"><img src="Imagenes/bag.svg" alt="bag"></a>
                 </div>
             </div>
         </div>
@@ -88,10 +94,10 @@
             </p>
 
             <!-- Seccion Tarjetas -->
-            <section>
+            <div>
                 <div class="grid-container">
                     <div class="card">
-                        <img src="./Imagenes/1.png" alt="Imagen 1">
+                        <img src="Imagenes/1.png" alt="Imagen 1">
                         <div class="card-content">
                             <h2>Campera Canguro</h2>
                             <p>$ 10000 <span>$12000</span></p>
@@ -99,7 +105,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./Imagenes/2.png" alt="Imagen 2">
+                        <img src="Imagenes/2.png" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Gorra Trucker</h2>
                             <p>$5000 <span>$7000</span></p>
@@ -107,7 +113,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./Imagenes/3.jpg" alt="Imagen 2">
+                        <img src="Imagenes/3.jpg" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Campera Mujer</h2>
                             <p>$9000 <span>$12000</span></p>
@@ -115,7 +121,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./Imagenes/4.png" alt="Imagen 2">
+                        <img src="Imagenes/4.png" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Chaleco Hilo</h2>
                             <p>$5000 <span>$7000</span></p>
@@ -123,7 +129,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./Imagenes/5.jpg" alt="Imagen 2">
+                        <img src="Imagenes/5.jpg" alt="Imagen 2">
                         <div class="card-content">
                             <h2>Campera hombre</h2>
                             <p>$15000 <span>$18000</span></p>
@@ -131,25 +137,45 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
 
-        <section>
+        <div class="banner2" data-aos="fade-left">
             <img src="Imagenes/bannermain.png" alt="bannermain">
-        </section>
-    
+        </div>
+        <div class="icono-wpp">
+            <a href="icono-wpp">
+                <img src="Imagenes/icon-wpp.svg" alt="icono-wpp">
+            </a>
+        </div>
     </main>
 
-   
+
 
     <footer>
-        <p>Todos los derechos reservados 2022</p>
+        <div>
+            <div class="sub-text">
+                <p>SUSCRIBITE A NUESTRO NEWSLETTER</p>
+            </div>
+            <div class="footer-content">
+                <input type="text" placeholder="Ingresa tu correo electrónico">
+                <button>SUSCRIBIRME :)</button>
+            </div>
+        </div>
+        <div class="Pie">
+            <p>Todos los derechos reservados 2022</p>
+        </div>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
