--- a/paginas/buzos.html
+++ b/paginas/buzos.html
@@ -16,6 +16,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Link Css -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- Link AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -53,28 +55,15 @@
         </div>
     </nav>
     <main>
-        <!-- Carrucel -->
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../Imagenes/fotocarrucel1.png" class="d-block w-100" alt="imagen Carrucel">
-                </div>
-                <div class="carousel-item">
-                    <img src="../Imagenes/fotocarrucel2.png" class="d-block w-100" alt="imagen Carrucel">
-                </div>
-
+        <div class="bannersecundario" data-aos="flip-up">
+            <div>
+                <img src="../Imagenes/bannersec.png" alt="">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
         <section>
-           
+            <div>
+                <p>BUZOS</p>
+            </div>
             <!-- Seccion Tarjetas -->
             <section>
                 <div class="grid-container">
@@ -102,12 +91,18 @@
         </section>
     </main>
     <footer>
-        <p>Todos los derechos reservados 2022</p>
+        <div class="Pie">
+            <p>Todos los derechos reservados 2022</p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
