--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -48,30 +48,35 @@
         </div>
     </nav>
 
+    <main>
+        <form class="contactos">
+            <fieldset disabled>
+                <p>Contactanos, dejanos tu mensaje</p>
+                <div class="formcontactos">
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
+                        <input type="text">
 
-    <form>
-        <fieldset disabled>
-            <legend>Contactanos, dejanos tu mensaje</legend>
-            
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                <input type="text">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Dejanos tu comentario</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
 
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Dejanos tu comentario</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
+                    <a class="buttonenviar" href="#">Enviar</a>
+                </div>
+            </fieldset>
+        </form>
 
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </fieldset>
-    </form>
-    <div>
-        <p>whatsapp: +546666666<br> mail:tiendatito@gmail.com<br>instagram:
-            https://www.instagram.com/tiendatito/<br></p>
-    </div>
+        <div class="direcciones-contactos">
+            <p>whatsapp: +546666666<br> mail:tiendatito@gmail.com<br>instagram:
+                https://www.instagram.com/tiendatito/<br></p>
+        </div>
+    </main>
     <footer>
-        <p>Todos los derechos reservados 2022</p>
+        <div class="Pie">
+            <p>Todos los derechos reservados 2022</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
