se agrego seo y cambios finales

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <link rel="icon" href="Imagenes/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+    
     <title>Tienda Tito</title>
+    <!--SEO on page  -->
+    <meta name="description" content="En Tienda Tito tenemos las mejores ofertas para que consigas Ropa de Hombre/mujer a precios increíbles. ¡Suscribite y recibí las novedades ... TIENDA SIN CARGO | ENVÍO GRATIS A TODO EL PAIS">
+    <!-- Meta keywords -->
+    <meta name="keywords" content="tienda, ropa, tienda en linea, camperas, gorras, buzos,">
+    <!-- Meta phone -->
+    <meta name="telephone" content="+546666666">
+    <!-- Meta whatsapp-->
+    <meta name="whatsapp" content="+546666666">
+    <!-- Meta author -->
+    <meta name="author" content="Martin Funes">
+    <!-- Meta geo -->
+    <meta name="geo.placename" content="Buenos Aires">
+
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -56,11 +69,12 @@
 
             <div class="signos">
                 <div class="corazon">
-                    <a href="#"><img src="Imagenes/corazon.svg" alt="corazon"></a>
+                    <a href="#"><img src="Imagenes/corazon.svg" alt="favoritos"></a>
                 </div>
                 <div class="carrito">
                     <a href="#"><img src="Imagenes/bag.svg" alt="bag"></a>
                 </div>
+
             </div>
         </div>
     </nav>
@@ -113,7 +127,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/3.jpg" alt="Imagen 2">
+                        <img src="Imagenes/3.jpg" alt="Imagen 3">
                         <div class="card-content">
                             <h2>Campera Mujer</h2>
                             <p>$9000 <span>$12000</span></p>
@@ -121,7 +135,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/4.png" alt="Imagen 2">
+                        <img src="Imagenes/4.png" alt="Imagen 4">
                         <div class="card-content">
                             <h2>Chaleco Hilo</h2>
                             <p>$5000 <span>$7000</span></p>
@@ -129,7 +143,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Imagenes/5.jpg" alt="Imagen 2">
+                        <img src="Imagenes/5.jpg" alt="Imagen 5">
                         <div class="card-content">
                             <h2>Campera hombre</h2>
                             <p>$15000 <span>$18000</span></p>
@@ -140,11 +154,11 @@
             </div>
         </section>
 
-        <div class="banner2" data-aos="fade-left">
+        <div class="banner2">
             <img src="Imagenes/bannermain.png" alt="bannermain">
         </div>
         <div class="icono-wpp">
-            <a href="icono-wpp">
+            <a href="#">
                 <img src="Imagenes/icon-wpp.svg" alt="icono-wpp">
             </a>
         </div>
@@ -153,24 +167,31 @@
 
 
     <footer>
-        <div>
-            <div class="sub-text">
-                <p>SUSCRIBITE A NUESTRO NEWSLETTER</p>
-            </div>
-            <div class="footer-content">
-                <input type="text" placeholder="Ingresa tu correo electrónico">
-                <button>SUSCRIBIRME :)</button>
-            </div>
-        </div>
-        <div class="Pie">
-            <p>Todos los derechos reservados 2022</p>
-        </div>
 
+        <div class="sub-text">
+            <p>SUSCRIBITE A NUESTRO NEWSLETTER</p>
+        </div>
+        <div class="footer-content">
+            <input type="text" placeholder="Ingresa tu correo electrónico">
+            <button>SUSCRIBIRME :)</button>
+        </div>
+        <div class="footer-content2">
+            <div class="enlaces">
+                <ul>
+                    <li><a href="#">Estado de pedido</a></li>
+                    <li><a href="#">Envio y retiros</a></li>
+                    <li><a href="#">cambios y devoluciones</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="text">
+                <p>Copyright© 2024 Tienda Tito - Todos los derechos reservados</p>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
