--- a/paginas/buzos.html
+++ b/paginas/buzos.html
@@ -46,10 +46,10 @@
             </div>
             <div class="signos">
                 <div class="corazon">
-                    <a href="#"><img src="../Imagenes/corazon.svg" alt="corazon"></a>
+                    <a href="#"><img src="../Imagenes/corazon.svg" alt="favoritos></a>
                 </div>
-                <div class="carrito">
-                    <a href="#"><img src="../Imagenes/bag.svg" alt="carrito"></a>
+                <div class=" carrito">
+                        <a href="#"><img src="../Imagenes/bag.svg" alt="carrito"></a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
     <main>
         <div class="bannersecundario" data-aos="flip-up">
             <div>
-                <img src="../Imagenes/bannersec.png" alt="">
+                <img src="../Imagenes/bannersec.png" alt="banner secundario">
             </div>
         </div>
         <section>
@@ -65,7 +65,7 @@
                 <p>BUZOS</p>
             </div>
             <!-- Seccion Tarjetas -->
-            <section>
+            <div>
                 <div class="grid-container">
                     <div class="card">
                         <img src="../Imagenes/1.png" alt="Imagen 1">
@@ -75,8 +75,6 @@
                             <button class="button">Comprar</button>
                         </div>
                     </div>
-
-
                     <div class="card">
                         <img src="../Imagenes/4.png" alt="Imagen 2">
                         <div class="card-content">
@@ -85,14 +83,42 @@
                             <button class="button">Comprar</button>
                         </div>
                     </div>
-
+                    <div class="card">
+                        <img src="../imagenes/buzo3.png" alt="Imagen buzo3">
+                        <div class="card-content">
+                            <h2>Buzo Crop Top</h2>
+                            <p>$8000</p>
+                            <button class="button">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../imagenes/buzo4.png" alt="Imagen buzo4">
+                        <div class="card-content">
+                            <h2>Buzo Detroit</h2>
+                            <p>$7800</p>
+                            <button class="button">Comprar</button>
+                        </div>
+                    </div>
                 </div>
-            </section>
+            </div>
         </section>
+        <div class="icono-wpp">
+            <a href="#"><img src="../imagenes/icon-wpp.svg" alt="icono-wpp"></a>
+        </div>
     </main>
     <footer>
-        <div class="Pie">
-            <p>Todos los derechos reservados 2022</p>
+        <div class="footer-content2">
+            <div class="enlaces">
+                <ul>
+                    <li><a href="#">Estado de pedido</a></li>
+                    <li><a href="#">Envio y retiros</a></li>
+                    <li><a href="#">cambios y devoluciones</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="text">
+                <p>Copyright© 2024 Tienda Tito - Todos los derechos reservados</p>
+            </div>
         </div>
     </footer>
 
