--- a/paginas/camperas.html
+++ b/paginas/camperas.html
@@ -53,7 +53,7 @@
     <main>
         <div class="bannersecundario" data-aos="flip-up">
             <div>
-                <img src="../Imagenes/bannersec.png" alt="">
+                <img src="../Imagenes/bannersec.png" alt="bannersecundario">
             </div>
         </div>
 
@@ -62,7 +62,7 @@
                 <p>CAMPERAS</p>
             </div>
             <!-- Seccion Tarjetas -->
-            <section>
+            <div>
                 <div class="grid-container">
                     <div class="card">
                         <img src="../Imagenes/1.png" alt="Imagen 1">
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="../Imagenes/3.jpg" alt="Imagen 2">
+                        <img src="../Imagenes/3.jpg" alt="Imagen 3">
                         <div class="card-content">
                             <h2>Campera Mujer</h2>
                             <p>$9000 <span>$12000</span></p>
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="../Imagenes/4.png" alt="Imagen 2">
+                        <img src="../Imagenes/4.png" alt="Imagen 4">
                         <div class="card-content">
                             <h2>Chaleco Hilo</h2>
                             <p>$5000 <span>$7000</span></p>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="../Imagenes/5.jpg" alt="Imagen 2">
+                        <img src="../Imagenes/5.jpg" alt="Imagen 5">
                         <div class="card-content">
                             <h2>Campera hombre</h2>
                             <p>$15000 <span>$18000</span></p>
@@ -100,13 +100,25 @@
                     </div>
                 </div>
 
-            </section>
+            </div>
         </section>
-
+        <div class="icono-wpp">
+            <a href="#"><img src="../imagenes/icon-wpp.svg" alt="icono-wpp"></a>
+        </div>
     </main>
     <footer>
-        <div class="Pie">
-            <p>Todos los derechos reservados 2022</p>
+        <div class="footer-content2">
+            <div class="enlaces">
+                <ul>
+                    <li><a href="#">Estado de pedido</a></li>
+                    <li><a href="#">Envio y retiros</a></li>
+                    <li><a href="#">cambios y devoluciones</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="text">
+                <p>Copyright© 2024 Tienda Tito - Todos los derechos reservados</p>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
