--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -49,33 +49,54 @@
     </nav>
 
     <main>
-        <form class="contactos">
-            <fieldset disabled>
-                <p>Contactanos, dejanos tu mensaje</p>
-                <div class="formcontactos">
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                        <input type="text">
+        <section class="contact-section">
+            <h2>Contactos</h2>
+            <form action="#" method="POST" class="comment-form">
+                <label for="email" class="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Tu email aquí" required>
+                <label for="comment">Comentario:</label>
+                <textarea id="comment" name="comment" placeholder="Escribe tu comentario aquí" rows="4" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
 
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Dejanos tu comentario</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
+            <div class="contact-info">
+                <h3>O tambien puedes encontrarnos en</h3>
+                <p>Calle 1234 de mentira, Buenos Aires, Argentina.</p>
+            </div>
+            <div class="social-media">
+                <h3>Síguenos en redes sociales</h3>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
 
-                    <a class="buttonenviar" href="#">Enviar</a>
-                </div>
-            </fieldset>
-        </form>
-
-        <div class="direcciones-contactos">
-            <p>whatsapp: +546666666<br> mail:tiendatito@gmail.com<br>instagram:
-                https://www.instagram.com/tiendatito/<br></p>
+        </section>
+        <div class="icono-wpp">
+            <a href="#"><img src="../imagenes/icon-wpp.svg" alt="icono-wpp"></a>
         </div>
     </main>
     <footer>
-        <div class="Pie">
-            <p>Todos los derechos reservados 2022</p>
+        <div class="sub-text">
+            <p>SUSCRIBITE A NUESTRO NEWSLETTER</p>
+        </div>
+        <div class="footer-content">
+            <input type="text" placeholder="Ingresa tu correo electrónico">
+            <button>SUSCRIBIRME :)</button>
+        </div>
+        <div class="footer-content2">
+            <div class="enlaces">
+                <ul>
+                    <li><a href="#">Estado de pedido</a></li>
+                    <li><a href="#">Envio y retiros</a></li>
+                    <li><a href="#">cambios y devoluciones</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="text">
+                <p>Copyright© 2024 Tienda Tito - Todos los derechos reservados</p>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
