--- a/paginas/gorras.html
+++ b/paginas/gorras.html
@@ -54,14 +54,14 @@
     <main>
         <div class="bannersecundario" data-aos="flip-up">
             <div>
-                <img src="../Imagenes/bannersec.png" alt="">
+                <img src="../Imagenes/bannersec.png" alt="bannersecundario">
             </div>
         </div>
         <section>
             <div>
                 <p>GORRAS</p>
             </div>
-            <section>
+            <div>
                 <div class="grid-container">
                     <div class="card">
                         <img src="../Imagenes/2.png" alt="Imagen 2">
@@ -71,13 +71,42 @@
                             <button class="button">Comprar</button>
                         </div>
                     </div>
+                    <div class="card">
+                        <img src="../imagenes/gorra2.png" alt="Imagen gorra2">
+                        <div class="card-content">
+                            <h2>Gorra Gris Lisa</h2>
+                            <p>$8000</p>
+                            <button class="button">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../imagenes/gorra3.png" alt="Imagen gorra3">
+                        <div class="card-content">
+                            <h2>Gorra Urbano Polo</h2>
+                            <p>$8000 </p>
+                            <button class="button">Comprar</button>
+                        </div>
+                    </div>
                 </div>
-            </section>
+            </div>
         </section>
+        <div class="icono-wpp">
+            <a href="#"><img src="../imagenes/icon-wpp.svg" alt="icono-wpp"></a>
+        </div>
     </main>
     <footer>
-        <div class="Pie">
-            <p>Todos los derechos reservados 2022</p>
+        <div class="footer-content2">
+            <div class="enlaces">
+                <ul>
+                    <li><a href="#">Estado de pedido</a></li>
+                    <li><a href="#">Envio y retiros</a></li>
+                    <li><a href="#">cambios y devoluciones</a></li>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="text">
+                <p>Copyright© 2024 Tienda Tito - Todos los derechos reservados</p>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
