--- a/index.html
+++ b/index.html
@@ -158,9 +158,7 @@
             <img src="Imagenes/bannermain.png" alt="bannermain">
         </div>
         <div class="icono-wpp">
-            <a href="#">
-                <img src="Imagenes/icon-wpp.svg" alt="icono-wpp">
-            </a>
+            <a href="#"><img src="Imagenes/icon-wpp.svg" alt="icono-wpp"></a>
         </div>
     </main>
 
