--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="icon" href="Imagenes/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:wght@300;400;500;700&display=swap"
-    rel="stylesheet">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
+
     <title>Tienda Tito</title>
     <!--SEO on page  -->
-    <meta name="description" content="En Tienda Tito tenemos las mejores ofertas para que consigas Ropa de Hombre/mujer a precios increíbles. ¡Suscribite y recibí las novedades ... TIENDA SIN CARGO | ENVÍO GRATIS A TODO EL PAIS">
+    <meta name="description"
+        content="En Tienda Tito tenemos las mejores ofertas para que consigas Ropa de Hombre/mujer a precios increíbles. ¡Suscribite y recibí las novedades ... TIENDA SIN CARGO | ENVÍO GRATIS A TODO EL PAIS">
     <!-- Meta keywords -->
     <meta name="keywords" content="tienda, ropa, tienda en linea, camperas, gorras, buzos,">
     <!-- Meta phone -->
@@ -189,7 +191,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
